# GenAI-AgenticAI-MCP-Tutorials

./: .gitignore  README.md  pyproject.toml
2_parallel_workflow/: 4_batsman_workflow.ipynb  5_UPSC_eassay_workflow.ipynb
3_conditional_workflow/: 6_quadratic_equation.ipynb
4_iterative_workflow/: 8_X_post_workflow.ipynb
5_chatbot_advance_topics/: 10_memory_chatbot.ipynb  11_persistence.ipynb  9_basic_chatbot.ipynb
6_chatbot_UI/resume_chat/: streamlit_frontend.py
6_chatbot_UI/threading_persistence_database/: langgraph_backend.py  streamlit_frontend.py
6_chatbot_UI/threading_persistence_database/database/: chat_history.db
7_LangSmith_MasterClass/: 2_sequential_chain.py  3_rag_v3.py  3_rag_v4.py
7_LangSmith_MasterClass/.indices/bbe9ca1c0c5ce63eaccb43be3119feafb481ca61b2961e9b7ea1d2bb6a6d2843/: index.faiss
AgenticAI-Using_LangGraph/: reflection_agent.ipynb
AgenticAI-Using_LangGraph/09_langgraph_mcp/01_demp_mcp_with_langgraph/: 01_langgraph_tools_async.py
AgenticAI-Using_LangGraph/09_langgraph_mcp/02_mcp_with_langgraph_gui/: langgraph_mcp_backend.py  streamlit_frontend_mcp.py
AgenticAI-Using_LangGraph/10_langgraph_agent_rag/01_rag/: 01_rag.ipynb
AgenticAI-Using_LangGraph/10_langgraph_agent_rag/02_agent_rag/: langgraph_rag_backend.py  streamlit_frontent_rag.py
AgenticAI-Using_LangGraph/12_sub_graphs/: 01_add_graph_as_node.ipynb  02_invoke_graph_from_node.ipynb
AgenticAI-Using_LangGraph/13_short_term_memory/: 1_stm.ipynb  2_stm_persistence.ipynb  3_message_triming.ipynb  4_stm_deletion.ipynb  5_stm_summarization.ipynb
AgenticAI-Using_LangGraph/14_long_term_memory/: 01_ltm_basics.ipynb  01_memory_store.ipynb  02_ltm_implementation.ipynb  02_memory_schema_profile.ipynb  03_memory_schema_collection.ipynb  04_memory_agent.ipynb
AgenticAI-Using_LangGraph/1_sequential_workflow/: 1_bmi_workflow.ipynb  2_simple_llm_workflow.ipynb  3_llm_prompt_chaining.ipynb
AgenticAI-Using_LangGraph/3_conditional_workflow/: 7_review_reply_workflow.ipynb
AgenticAI-Using_LangGraph/4_iterative_workflow/: 8_X_post_workflow.ipynb
AgenticAI-Using_LangGraph/5_chatbot_advance_topics/: 12_fault_tolerance.ipynb  9_basic_chatbot.ipynb
AgenticAI-Using_LangGraph/7_LangSmith_MasterClass/: 1_simple_llm_call.py  3_rag_v1.py  3_rag_v2.py  5_langgraph.py
AgenticAI-Using_LangGraph/8_langGraph_tools/: langgraph_backend_tools.py  streamlit_frontend.py
AgenticAI-Using_LangGraph/Projects/05_blogAgent/: prompt.py  (+4 more)
AgenticAI-Using_LangGraph/agentic_ai_coursera/: ReAct_Agent.ipynb  ReAct_agent_2.ipynb  essay_writer.ipynb  reflection_agent_2.ipynb
GenAI-Using-LangChain/10_YT_RAG/: rag_bot.ipynb
GenAI-Using-LangChain/11_Agents/: agent_example.ipynb  built_in_tools.ipynb  tool_calling.ipynb
GenAI-Using-LangChain/2_component_prompt/: chat_prompt_template.py  chatbot.py  messages.py  prompt.json  prompt_generator.py  prompt_ui.py
GenAI-Using-LangChain/4_chains/: conditional_chain.py  parallel_chain.py
GenAI-Using-LangChain/5_Runnable/: llmchain.py  runnable_branch.py  runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequence.py  simple_llm.py
GenAI-Using-LangChain/6_document_loaders/: csv_loader.ipynb  text_loader.ipynb  web_page_loader.ipynb
GenAI-Using-LangChain/7_text_splitter/: length_based_text_splitting.ipynb  recursive_text_splitter.ipynb  semantic_based_splitter.ipynb
GenAI-Using-LangChain/8_vector_stores/: chroma_vectordb.ipynb
GenAI-Using-LangChain/9_retreivers/: wikipedia_retreiver.ipynb
GenAI-Using-LangChain/chains/: sequential_chain.py  simple_chain.py
GenAI-Using-LangChain/document_loaders/: directory_loader.ipynb  pdf_loader.ipynb
LangChain Academy Course/02_Projects/: 1.5_personal_chef.ipynb  1.5_personal_chef.py
MCP_tutorial/01_demo_mcp_server/: 01_practice_mcp_server.py
MCP_tutorial/02_expense_tracker_server/: plan.md
parallel_workflow/: 4_batsman_workflow.ipynb
sequential_workflow/: 3_llm_prompt_chaining.ipynb
(+117 files in other folders)
