[project]
name = "agentic-ai-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies =  [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.3.6",
    "ddgs>=9.9.3",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.1",
    "fastmcp>=2.14.0",
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab-widgets>=3.0.16",
    "langchain>=1.1.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-experimental>=0.4.1",
    "langchain-faiss>=0.1.1",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.2",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "langgraph-cli[inmem]>=0.4.11",
    "langsmith>=0.4.59",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.5",
    "psycopg[binary,pool]>=3.3.2",
    "pyaudio>=0.2.14",
    "pydantic[email]>=2.12.5",
    "pypdf>=6.4.1",
    "pyppeteer>=0.0.25",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "sentence-transformers>=5.2.0",
    "sounddevice>=0.5.3",
    "streamlit>=1.52.1",
    "tavily>=1.1.0",
    "tiktoken>=0.12.0",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.3",
]
